# raspberry-pi

./: .gitignore  CMakeLists.txt  Makefile  README.md  desktop-client.cpp  desktop-client2  main  main.cpp  rpi-server.cpp  testKai.txt  zzDEPR_client_controller.cpp  zzDEPR_server_pi.cpp
lib/canbus/: canbus.cpp  canbus.h
lib/include/: message.h  queue.h  registry.h  task.h  task_manager.h
lib/task_manager/: message.h  queue.h  task.cpp  task.h  task_manager.cpp  task_manager.h
src/: main.cpp  packet_decoder.cpp  packet_decoder.h
src/tasks/: simple_logger.cpp  simple_logger.h  tcp.cpp  tcp.h  timeout_monitor.cpp  timeout_monitor.h
